--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=DockerCloudMAGA
 
+cloud.aws.credentials.access-key=4VdJ6uG9YdUaDhjWw4ZYbt
+cloud.aws.credentials.secret-key=5aA7S3M1r83RxcVXajx4YpSKyb2AQMzkA7srQXfek85D
